# Eventix

./: .gitignore  .gitmodules  .nvim.lua  .prettierignore  .prettierrc  .yamlfmt.yaml  AGENTS.md  Cargo.toml  README.md  b  index.html  package.json  todo.txt
.github/: dependabot.yml
.github/actions/rust-setup/: action.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
data/icons/: index.theme
data/locale/: English.toml  German.toml
data/static/: activity.js  ajax.js  basic.js  content.js  drag.js  error.js  modal.js  popup.js  style.css  sync.js
data/static/contrib/: jquery-ui.theme.min.css
dev/bench/: data.js
flatpak/: com.github.NilsTUD.Eventix-Import.desktop  com.github.NilsTUD.Eventix.desktop  com.github.NilsTUD.Eventix.json  com.github.hrniels.Eventix-Import.desktop  com.github.hrniels.Eventix.desktop  com.github.hrniels.Eventix.json
ical/: Cargo.toml
ical/src/: lib.rs  util.rs
ical/src/col/: dir.rs  file.rs  item.rs  mod.rs  occurrence.rs  source.rs  store.rs
ical/src/objects/: alarm.rs  attendee.rs  calendar.rs  component.rs  date.rs  duration.rs  event.rs  evlike.rs  item.rs  mod.rs  organizer.rs  recur.rs  source.rs  status.rs  todo.rs
ical/src/parser/: line.rs  mod.rs  prop.rs
libs/cmd/: Cargo.toml
libs/cmd/src/: lib.rs
libs/ical/: Cargo.toml
libs/ical/src/: lib.rs  util.rs
libs/ical/src/col/: dir.rs  file.rs  mod.rs  occurrence.rs  store.rs
libs/ical/src/objects/: alarm.rs  attendee.rs  calendar.rs  component.rs  date.rs  duration.rs  event.rs  evlike.rs  locale.rs  mod.rs  organizer.rs  recur.rs  status.rs  timezone.rs  todo.rs  tzresolver.rs
libs/ical/src/parser/: line.rs  mod.rs  prop.rs
libs/ical/tests/: common.rs  dir.rs  dir_integration.rs  file.rs  file_integration.rs  occurrence.rs  store.rs  store_integration.rs
libs/ical/tests/data/: event_a.ics  event_b.ics  event_cancelled.ics  event_with_alarm.ics  event_with_attendees.ics  event_with_todo.ics  invalid.ics  multi_uid.ics  recurring_with_overwrite.ics  todo_with_status.ics  two_events.ics
libs/locale/: Cargo.toml
libs/locale/src/: de.rs  en.rs  lib.rs
libs/state/: Cargo.toml
libs/state/src/: lib.rs  misc.rs  persalarms.rs  settings.rs  util.rs
libs/state/src/sync/: fs.rs  mod.rs  o365.rs  vdirsyncer.rs
libs/state/tests/: common.rs  settings.rs  state.rs  state_integration.rs
src/: main.rs
src/objects/: calendar.rs  date.rs  event.rs  item.rs  mod.rs  recur.rs  source.rs  status.rs  store.rs  todo.rs
src/parser/: line.rs  mod.rs  prop.rs
state/: Cargo.toml
state/src/: lib.rs  misc.rs  persalarms.rs  settings.rs
tools/: export_bench.py  genicons.sh  genkey.sh  rrule.py  sync.sh
