[workspace]
resolver = "2"
members = [ "bin/app",
    "bin/eventix",
    "bin/evlist",
    "ical",
    "state",
]

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.41", features = ["derive"] }
eventix-state = { path = "state" }
ical = { path = "ical" }
itertools = "0.14.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"
tracing = "0.1.41"
