[package]
name = "ical"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.0"
itertools = "0.14.0"
once_cell = "1.20.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tracing = "0.1.41"
