[package]
name = "ical"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.3"
itertools = "0.14.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.12"
tracing = "0.1.41"
