[package]
name = "eventix-cmd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
eventix-ical.workspace = true
eventix-locale.workspace = true
eventix-state.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
xdg.workspace = true

fs2 = "0.4.3"

[dev-dependencies]
tempfile.workspace = true
