[package]
name = "eventix-ical"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono-tz.workspace = true
chrono.workspace = true
formatx.workspace = true
itertools.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
