[package]
name = "eventix-locale"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags.workspace = true
chrono-tz.workspace = true
chrono.workspace = true
eventix-ical.workspace = true
once_cell.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
xdg.workspace = true

iana-time-zone = "0.1.65"
