[package]
name = "eventix-state"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono-tz.workspace = true
chrono.workspace = true
eventix-ical.workspace = true
eventix-locale.workspace = true
once_cell.workspace = true
percent-encoding.workspace = true
serde.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
xdg.workspace = true
